--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         }
     </style>
     <head>
-        <title>2024Web</title>
+        <title>calculator</title>
     </head>
     <body>
         <h1>資工選課表</h1>
+        <input type="number">
         <table id="csie">
             <tr>
                 <th>開課單位</th><th>課程名稱</th><th>授課教師</th>
